Fixing wrong background color

--- a/public/stylesheets/environment-users.scss
+++ b/public/stylesheets/environment-users.scss
@@ -36,6 +36,3 @@
 .environment-profiles-results-footer {
   float: right;
 }
-#environment-profiles-filter-filter {
-  background-color: blue;
-}
